--- a/pirate.html
+++ b/pirate.html
@@ -20,7 +20,7 @@
             width: 150px;
             height: 150px;
             overflow: hidden;
-            margin:0px 5px;
+            margin: 0px 5px;
         }
     </Style>
 
@@ -32,97 +32,192 @@
         <p style="font-size: 18px;">Click on the locations to search for treasure, beware the traps</p>
         <p id="locations" style="font-size: 16px; font-weight: bold;">Number of locations checked is zero.</p>
         <p id="penalty" style="font-size: 16px; font-weight: bold;">Penalty is zero.</p>
-        <p class="btn btn-primary">Click for help.</p>
+        <p class="btn btn-primary" id="help-button">Click for help.</p>
         <p id="help" style="font-size: 16px; font-weight: bold;">Help report</p>
     </div>
     <div class="container d-flex justify-content-center">
         <div class="row">
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location0" onclick="check(0)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location1" onclick="check(1)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location2" onclick="check(2)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location3" onclick="check(3)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location4" onclick="check(4)" />
             </div>
         </div>
         <div class="row ">
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location5" onclick="check(5)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location6" onclick="check(6)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location7" onclick="check(7)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location8" onclick="check(8)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location9" onclick="check(9)" />
             </div>
         </div>
         <div class="row ">
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location10" onclick="check(10)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location11" onclick="check(11)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location12" onclick="check(12)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location13" onclick="check(13)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location14" onclick="check(14)" />
             </div>
         </div>
         <div class="row ">
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location15" onclick="check(15)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location16" onclick="check(16)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location17" onclick="check(17)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location18" onclick="check(18)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location19" onclick="check(19)" />
             </div>
         </div>
         <div class="row ">
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location20" onclick="check(20)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location21" onclick="check(21)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location22" onclick="check(22)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location23" onclick="check(23)" />
             </div>
             <div class="square-image">
-                <img src="Location.jpg" alt="Treasure city " class="img-fluid" />
+                <img src="Location.jpg" alt="Treasure city " class="img-fluid" id="location24" onclick="check(24)" />
             </div>
         </div>
-        
+
     </div>
+    <script>
+        var ids = [
+            "location0",
+            "location1",
+            "location2",
+            "location3",
+            "location4",
+            "location5",
+            "location6",
+            "location7",
+            "location8",
+            "location9",
+            "location10",
+            "location11",
+            "location12",
+            "location13",
+            "location14",
+            "location15",
+            "location16",
+            "location17",
+            "location18",
+            "location19",
+            "location20",
+            "location21",
+            "location22",
+            "location23",
+            "location24",
+        ];
+        var ids = [];
+        var checkCount = 0;
+        var penalty = 0;
+        var lastCheck = 0;
+        var treasureLocation = 5;
+        var trapLocation = 18;
+        var gameOver = false;
+        function check(position) {
+            if (gameOver) {
+                return;
+            }
+            let id = ids[position];
+            let imgElement = document.getElementById(id);
+            if (position === treasureLocation) {
+                imgElement.src = "treasure.jpg";
+                checkCount++;
+                gameOver = true;
+                penalty -= 3;
+            } else if (position === trapLocation) {
+                imgElement.src = "trap.jpg";
+                checkCount++;
+                gameOver = true;
+                penalty += 4;
+            } else {
+                imgElement.src = "pirate.jpg";
+                checkCount++;
+                penalty++;
+            }
+            document.getElementById("locations").innerText =
+          "Number of locations checked is " + checkCount;
+        document.getElementById("penalty").innerText = " Penalty is " + penalty;
+            lastCheck = position;
+        }
+        function help() {
+            let rowLast = Math.floor(lastCheck / 5);
+            let colLast = lastCheck % 5;
+            let rowTreasure = Math.floor(treasureLocation / 5);
+            let colTreasure = treasureLocation % 5;
+
+            let rowDiff = Math.abs(rowLast - rowTreasure);
+            let colDiff = Math.abs(colLast - colTreasure);
+            if (
+                (rowDiff <= 1 && colDiff <= 1 && rowDiff !== colDiff) ||
+                (rowDiff === 2 && colDiff === 0) ||
+                (rowDiff === 0 && colDiff === 2)
+            ) {
+                document.getElementById("help").innerText = "Can Smell It";
+                document.getElementById("help").style.color = "red";
+                penalty += 2;
+            } else if (rowDiff <= 2 && colDiff <= 2) {
+                document.getElementById("help").innerText = "Close Matie";
+                document.getElementById("help").style.color = "orange";
+                penalty += 2;
+            } else {
+                document.getElementById("help").innerText = "Step Faster";
+                document.getElementById("help").style.color = "black";
+                penalty += 2;
+            }
+            document.getElementById("penalty").innerText = penalty;
+        }
+
+        for (let i = 0; i < 25; i++) {
+            ids.push("location" + i);
+        }
+        document.getElementById("help-button").addEventListener("click", help);
+    </script>
+
 
 </body>
 
