--- a/pirate.html
+++ b/pirate.html
@@ -125,31 +125,9 @@
     </div>
     <script>
         var ids = [
-            "location0",
-            "location1",
-            "location2",
-            "location3",
-            "location4",
-            "location5",
-            "location6",
-            "location7",
-            "location8",
-            "location9",
-            "location10",
-            "location11",
-            "location12",
-            "location13",
-            "location14",
-            "location15",
-            "location16",
-            "location17",
-            "location18",
-            "location19",
-            "location20",
-            "location21",
-            "location22",
-            "location23",
-            "location24",
+            "location0", "location1", "location2", "location3", "location4", "location5", "location6", "location7", "location8", "location9", "location10", "location11",
+            "location12", "location13", "location14", "location15", "location16", "location17", "location18", "location19", "location20", "location21", "location22",
+            "location23", "location24",
         ];
         var checkCount = 0;
         var penalty = 0;
@@ -179,8 +157,8 @@
                 penalty++;
             }
             document.getElementById("locations").innerText =
-          "Number of locations checked is " + checkCount;
-        document.getElementById("penalty").innerText = " Penalty is " + penalty;
+                "Number of locations checked is " + checkCount;
+            document.getElementById("penalty").innerText = " Penalty is " + penalty;
             lastCheck = position;
         }
         function help() {
