--- a/react.html
+++ b/react.html
@@ -27,14 +27,31 @@
           console.log(reactTime);
       }
 
+      // function startTimer() {
+      //     setTimeout(function () {
+      //         var targetTime = Date.now();
+      //         var reactionTime = reactTime !== undefined ? reactTime - targetTime : "N/A";
+      //         document.getElementById("target-time").textContent = targetTime + " ms";
+      //         document.getElementById("counter-time").textContent = reactionTime + " ms";
+      //     }, Math.random() * 5000 + 1000); 
+      // }
       function startTimer() {
-          setTimeout(function () {
-              var targetTime = Date.now();
-              var reactionTime = reactTime !== undefined ? reactTime - targetTime : "N/A";
-              document.getElementById("target-time").textContent = targetTime + " ms";
-              document.getElementById("counter-time").textContent = reactionTime + " ms";
-          }, Math.random() * 5000 + 1000); 
-      }
+            for (var i = 0; i < 9; i++) {
+                setTimeout(function () {
+                    document.getElementById("counter-time").textContent = i;
+                }, (8 - i) * 1000);
+            }
+
+            setTimeout(function () {
+                if (reactTime === undefined) {
+                    document.getElementById("target").innerHTML = "Too Slow";
+                } else {
+                    var endTime = Date.now();
+                    var elapsedTime = endTime - reactTime;
+                    document.getElementById("target").innerHTML = "Time was " + elapsedTime + " ms";
+                }
+            }, 8000);
+        }
 
 </script>
 </body>
