--- a/react.html
+++ b/react.html
@@ -11,13 +11,14 @@
   
 </head>
 <body>
-
+<div class="container">
   <h2>Kelifa speed check </h2>
   <div id="target">Your time: <span id="target-time">0 ms</span> </div>
   <div id="counter">Count: <span id="counter-time">0 ms</span> </div>
 
   <button onclick="startTimer()">Start Timer</button>
   <button onclick="recordTime()">React</button>
+</div>
 
   <script>
       var reactTime = undefined;
